<?xml version="1.0"?>
<package format="2">
  <name>pacmod_game_control</name>
  <version>2.2.0</version>
  <description>ROS Package for controlling the AStuff PACMod with a Joystick</description>
  <license>MIT</license>

  <maintainer email="support.as.ap@hexagon.com">AutonomouStuff Support</maintainer>
  <author email="jdriscoll@autonomoustuff.com">Joe Driscoll</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pacmod3</depend>
  <depend>joy</depend>
</package>
